[package]
authors = ["Matthew Collins <me@thinkof.name>"]
name = "fungui"
version = "0.1.0"

description = "A user interface layout system"
license = "MIT / Apache-2.0"
repository = "https://github.com/Thinkofname/fungui"
documentation = "https://docs.rs/fungui"
keywords = ["gui", "user-interface", "gamedev"]
categories = ["gui"]

[dependencies]
fnv = "1.0.6"
ref_filter_map = "1.0.1"
bitflags = "1.0.4"

[dependencies.fungui_syntax]
path = "./syntax"
version = "0.1.0"

[workspace]
members = [
    "./syntax"
]

[features]
tests = []