[package]
name = "stylish_webrender"
version = "0.1.0"
authors = ["Matthew Collins <thethinkofdeath@gmail.com>"]

[features]
debugger = ["webrender/debugger"]

[dependencies]
stylish = { path = "../" }
gleam = "0.4.3"
app_units = "0.5"
stb_truetype = "0.2.1"
euclid = "0.15"

[dev-dependencies]
glutin = "0.9"
image = "0.13.0"

[dependencies.webrender]
git = "https://github.com/servo/webrender"
rev = "8a39cf24f493e894a66c2465dd310a2b2923e558"
default-features = false
features = [ "freetype-lib" ]
