[package]
authors = ["Matthew Collins <thethinkofdeath@gmail.com>"]
name = "stylish_webrender"
version = "0.1.0"

[dependencies]
app_units = "0.5.6"
euclid = "0.15.5"
gleam = "0.4.14"
stb_truetype = "0.2.1"

[dependencies.stylish]
path = "../"

[dependencies.webrender]
default-features = false
features = ["freetype-lib"]
git = "https://github.com/servo/webrender"
rev = "ab5a1b89"

[dev-dependencies]
glutin = "0.10.1"
image = "0.17.0"

[features]
debugger = ["webrender/debugger"]
