[package]
authors = ["Matthew Collins <thethinkofdeath@gmail.com>"]
name = "stylish_webrender"
version = "0.1.0"

[dependencies]
app_units = "0.6"
euclid = "0.17"
gleam = "0.4.14"
stb_truetype = "0.2.1"

[dependencies.stylish]
path = "../"

[dependencies.webrender]
default-features = false
features = ["freetype-lib"]
git = "https://github.com/servo/webrender"
rev = "565e2408bf21f34bd09a555d0e72ba369daeed87"

[dev-dependencies]
glutin = "0.10.1"
image = "0.17.0"

[features]
debugger = ["webrender/debugger"]
